src/test/ui/did_you_mean/issue-35675.stderr
error[E0412]: cannot find type `Apple` in this scope
  --> $DIR/issue-35675.rs:16:29
   |
16 | fn should_return_fruit() -> Apple {
   |                             ^^^^^ not found in this scope
   |
help: there is an enum variant `Fruit::Apple`, did you mean to use `Fruit`?
  --> $DIR/issue-35675.rs:12:5
   |
12 |     Apple(i64),
   |     ^^^^^^^^^^

error[E0425]: cannot find function `Apple` in this scope
  --> $DIR/issue-35675.rs:17:5
   |
17 |     Apple(5)
   |     ^^^^^ not found in this scope
   |
   = help: possible candidate is found in another module, you can import it into scope:
             `use Fruit::Apple;`

error[E0573]: expected type, found variant `Fruit::Apple`
  --> $DIR/issue-35675.rs:20:33
   |
20 | fn should_return_fruit_too() -> Fruit::Apple {
   |                                 ^^^^^^^^^^^^ not a type
   |
help: there is an enum variant `Fruit::Apple`, did you mean to use `Fruit`?
  --> $DIR/issue-35675.rs:12:5
   |
12 |     Apple(i64),
   |     ^^^^^^^^^^

error[E0425]: cannot find function `Apple` in this scope
  --> $DIR/issue-35675.rs:21:5
   |
21 |     Apple(5)
   |     ^^^^^ not found in this scope
   |
   = help: possible candidate is found in another module, you can import it into scope:
             `use Fruit::Apple;`

error[E0573]: expected type, found variant `Ok`
  --> $DIR/issue-35675.rs:24:13
   |
24 | fn foo() -> Ok {
   |             ^^ not a type
   |
   = help: there is an enum variant `std::result::Result::Ok`, did you mean to use `std::result::Result`?
   = help: there is an enum variant `std::prelude::v1::Ok`, did you mean to use `std::prelude::v1`?

error[E0412]: cannot find type `Variant3` in this scope
  --> $DIR/issue-35675.rs:28:13
   |
28 | fn bar() -> Variant3 {
   |             ^^^^^^^^ not found in this scope
   |
help: there is an enum variant `x::Enum::Variant3`, did you mean to use `x::Enum`?
  --> $DIR/issue-35675.rs:41:9
   |
41 |         Variant3(usize),
   |         ^^^^^^^^^^^^^^^

error[E0573]: expected type, found variant `Some`
  --> $DIR/issue-35675.rs:31:13
   |
31 | fn qux() -> Some {
   |             ^^^^ not a type
   |
   = help: there is an enum variant `std::prelude::v1::Some`, did you mean to use `std::prelude::v1`?
   = help: there is an enum variant `std::prelude::v1::Option::Some`, did you mean to use `std::prelude::v1::Option`?

error: aborting due to 7 previous errors

